Start of mashing pages in

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -11,7 +11,6 @@
    ========================================================================== */
 
 html {
-    color: #222;
     font-size: 1em;
     line-height: 1.4;
 }
@@ -371,4 +370,8 @@ textarea {
     h3 {
         page-break-after: avoid;
     }
+}
+
+.silence {
+    color: #222;
 }
