--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -1,3 +1,5 @@
+
+
 body {
     margin: 0 auto;
     padding: 0;
@@ -6,10 +8,15 @@ body {
     background-color: #f2f2f2;
 }
 
-#header {
-    background-color: #c94e5d;
-    margin: 0;
-    padding: 0;
+.o-branding {
+  background-color: #c94e5d;
+  height: 48px;
+  text-align: center;
+}
+
+.o-branding__logo {
+  display: block;
+  margin: 0 auto;
 }
 
 #main-content {
