--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -1,15 +1,212 @@
+//* cyrillic-ext */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Comfortaa Light'), local('Comfortaa-Light'), url(https://fonts.gstatic.com/s/comfortaa/v12/r_tUZNl0G8xCoOmp_JkSCg7aC6SjiAOpAWOKfJDfVRY.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Comfortaa Light'), local('Comfortaa-Light'), url(https://fonts.gstatic.com/s/comfortaa/v12/r_tUZNl0G8xCoOmp_JkSChdwxCXfZpKo5kWAx_74bHs.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Comfortaa Light'), local('Comfortaa-Light'), url(https://fonts.gstatic.com/s/comfortaa/v12/r_tUZNl0G8xCoOmp_JkSCvy1_HTwRwgtl1cPga3Fy3Y.woff2) format('woff2');
+  unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Comfortaa Light'), local('Comfortaa-Light'), url(https://fonts.gstatic.com/s/comfortaa/v12/r_tUZNl0G8xCoOmp_JkSCvgrLsWo7Jk1KvZser0olKY.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Comfortaa Light'), local('Comfortaa-Light'), url(https://fonts.gstatic.com/s/comfortaa/v12/r_tUZNl0G8xCoOmp_JkSCojoYw3YTyktCCer_ilOlhE.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Comfortaa Light'), local('Comfortaa-Light'), url(https://fonts.gstatic.com/s/comfortaa/v12/r_tUZNl0G8xCoOmp_JkSChampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+/* cyrillic-ext */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'), url(https://fonts.gstatic.com/s/comfortaa/v12/Be0CkOtwwI2n86HMhtablYX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'), url(https://fonts.gstatic.com/s/comfortaa/v12/-DackuIFgo7Hfy3rR14C34X0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'), url(https://fonts.gstatic.com/s/comfortaa/v12/UgYUhLCkRUocJ8OZnvelZ4X0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'), url(https://fonts.gstatic.com/s/comfortaa/v12/Ao3NCHUpHgdVgp2UtibJoYX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'), url(https://fonts.gstatic.com/s/comfortaa/v12/wz1gqe57Mbg11v-OrLlVjoX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'), url(https://fonts.gstatic.com/s/comfortaa/v12/qLBu5CQmSMt1H43OiWJ77ZBw1xU1rKptJj_0jans920.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+/* cyrillic-ext */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Comfortaa Bold'), local('Comfortaa-Bold'), url(https://fonts.gstatic.com/s/comfortaa/v12/fND5XPYKrF2tQDwwfWZJIw7aC6SjiAOpAWOKfJDfVRY.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Comfortaa Bold'), local('Comfortaa-Bold'), url(https://fonts.gstatic.com/s/comfortaa/v12/fND5XPYKrF2tQDwwfWZJIxdwxCXfZpKo5kWAx_74bHs.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Comfortaa Bold'), local('Comfortaa-Bold'), url(https://fonts.gstatic.com/s/comfortaa/v12/fND5XPYKrF2tQDwwfWZJI_y1_HTwRwgtl1cPga3Fy3Y.woff2) format('woff2');
+  unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Comfortaa Bold'), local('Comfortaa-Bold'), url(https://fonts.gstatic.com/s/comfortaa/v12/fND5XPYKrF2tQDwwfWZJI_grLsWo7Jk1KvZser0olKY.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Comfortaa Bold'), local('Comfortaa-Bold'), url(https://fonts.gstatic.com/s/comfortaa/v12/fND5XPYKrF2tQDwwfWZJI4joYw3YTyktCCer_ilOlhE.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Comfortaa Bold'), local('Comfortaa-Bold'), url(https://fonts.gstatic.com/s/comfortaa/v12/fND5XPYKrF2tQDwwfWZJIxampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
 
+
+* {
+  box-sizing: border-box;
+}
+
+.bideford-app {
+  background-color: #fff;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 414px;
+}
 
 body {
-    margin: 0 auto;
-    padding: 0;
-    font-family: 'Comfortaa', cursive;
-    width: 414px;
-    background-color: #f2f2f2;
+  background-color: #f5f5f5;
+  font-family: 'Helvetica Neue', Roboto, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  /*font-family: 'Comfortaa', cursive;*/
+}
+
+img {
+  max-width: 100%;
+}
+
+.pushSides {
+  padding: 0 1rem;
+}
+
+.primaryButton {
+  align-items: center;
+  background-color: #c94e5d;
+  border-radius: 3px;
+  color: #fff;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  margin: 1rem 0;
+  outline: none;
+  padding: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+}
+
+.primaryButton > .icon {
+  margin-right: 1rem;
+}
+
+.t-link {
+  border-bottom: 1px solid #c94e5d;
+  color: #c94e5d;
+  text-decoration: none;
+}
+
+.hoverState {
+  cursor: pointer;
 }
 
 .o-branding {
   background-color: #c94e5d;
+  display: flex;
   height: 48px;
   text-align: center;
 }
@@ -19,29 +216,165 @@ body {
   margin: 0 auto;
 }
 
-#main-content {
-    background-color: #fff;
-}
-
-h1 {
-    padding: 15px;
+.c-header-carousel {
+    display: flex;
     margin: 0;
-    color: #fff;
-    font-size: 1.3em;
+    padding: 0;
 }
 
-h2 {
-    text-align: center;
-    font-size: 1.5em;
-    color: #333;
-    margin: 0;
-    padding: 15px 10px;
+.c-header-carousel__item {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 33.33%;
 }
 
-p {
-    text-align: center;
-    font-size: 1.2em;
-    color: #555;
-    width: 80%;
-    margin: 0 auto;
+.header-links {
+  position: relative;
+}
+
+.header-links__overlay {
+  background: rgba(0,0,0,0.3);
+  bottom: 0;
+  color: #fff;
+  padding: 0.5rem 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.header-links__overlay > .heading {
+  font-size: 40px;
+  font-family: 'Comfortaa-bold', cursive;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.header-links__overlay > .sub-heading {
+  font-family: 'Comfortaa-light', cursive;
+  font-weight: 300;
+}
+
+.heading-secondary {
+  text-align: left;
+  font-size: 18px;
+  font-weight: bold;
+  margin-left: 1rem;
+}
+
+.event-search {
+  width: 100%;
+}
+
+.event-search > .card {
+  margin-top: 1.5rem;
+  padding: 2rem 1rem;
+}
+
+.o-search {
+  border: 2px solid #C94E5D;
+  border-radius: 3px;
+  display: flex;
+  flex: 1;
+  max-width: 100%;
+  width: 100%;
+}
+
+.o-search__label {
+  display: block;
+  font-family: 'Comfortaa', cursive;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 0.75rem;
+  text-align: left;
+}
+
+.o-search__input {
+  outline: none;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.o-search__button {
+  background-color: #C94E5D;
+  border: 1px solid #fff;
+  border-radius: 0 2px 2px 0;
+  margin-left: auto;
+  padding: 0.5rem 1rem;
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  margin: 1rem;
+  padding: 1rem;
+  position: relative;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card-yellow {
+  background-color: #F3EEB4;
+}
+
+.event-header-info {
+  position: relative;
+}
+
+.event-header-info__title {
+  background-color: rgba(0,0,0,0.5);
+  bottom: 0;
+  color: #fff;
+  padding: 1rem;
+  position: absolute;
+  text-align: left;
+}
+
+.event-header-info__title > .heading,
+.event-bio > .heading {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1;
+}
+
+.event-header-info__title > .event-date,
+.event-bio > .event-date {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1;
+}
+
+.event-bio {
+  font-size: 16px;
+  padding: 1rem;
+  text-align: left;
+}
+
+.remembrance-actions > .heading {
+  font-weight: 600;
+}
+
+.memoria-link {
+  background-color: #ABCE5D;
+  color: #fff;
+  display: flex;
+  flex: 1;
+  margin-top: 1rem;
+  padding: 1rem;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.memoria-link > .label {
+  font-size: 17px;
+  margin-left: 1rem;
+}
+
+.memoria-link > .chevron {
+  margin-left: auto;
 }
