--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -11,7 +11,7 @@
    ========================================================================== */
 
 html {
-    color: #222;
+    color: #514441;
     font-size: 1em;
     line-height: 1.4;
 }
@@ -99,10 +99,11 @@ textarea {
 
 
 .c-breathe {
-  animation: colorchange 50s; /* animation-name followed by duration in seconds*/
+  animation: colorchange 50s infinite; /* animation-name followed by duration in seconds*/
      /* you could also use milliseconds (ms) or something like 2.5s */
   -webkit-animation: colorchange 50s; /* Chrome and Safari */
   text-align: center;
+  position: relative;
 }
 
 @keyframes colorchange
@@ -143,57 +144,63 @@ textarea {
 }
 
 @-webkit-keyframes pulse {
+
   0% {
-    -webkit-box-shadow: 0 0 24px 24px rgba(226,100,116, 1);
+    -webkit-box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+    width: 80px;
+    height: 80px;
   }
-  10% {
-    -webkit-box-shadow: 0 0 30px 24px rgba(226,100,116, 1);
-  }
-  20% {
-    -webkit-box-shadow: 0 0 36px 24px rgba(226,100,116, 1);
-  }
-  40% {
-    -webkit-box-shadow: 0 0 48px 24px rgba(226,100,116, 1);
-  }
+
   50% {
-     -webkit-box-shadow: 0 0 54px 24px rgba(226,100,116, 1);
+    -webkit-box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+    height: 120px;
+    width: 120px;
   }
-  60% {
-    -webkit-box-shadow: 0 0 48px 24px rgba(226,100,116, 1);
-  }
-  80% {
-    -webkit-box-shadow: 0 0 36px 24px rgba(226,100,116, 1);
-  }
-  90% {
-     -webkit-box-shadow: 0 0 30px 24px rgba(226,100,116, 1);
-  }
+
   100% {
-    -webkit-box-shadow: 0 0 24px 24px rgba(226,100,116, 1);
+    -webkit-box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+    height: 80px;
+    width: 80px;
   }
-}/*
+}
+
 @keyframes pulse {
   0% {
-    -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
-    box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    -moz-box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+    box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+    width: 80px;
+    height: 80px;
   }
-  70% {
-      -moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
-      box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+  50% {
+      -moz-box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+      box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+      height: 120px;
+      width: 120px;
   }
   100% {
-      -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-      box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+      -moz-box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+      box-shadow: 0 0 40px 36px rgba(226,100,116, 1);
+      height: 80px;
+      width: 80px;
   }
-}*/
+}
 
 
 .o-viewer-count {
     color: #fff;
     font-family: sans-serif;
-    size: 18px;
+    font-size: 18px;
+    font-weight: 600;
     position: absolute;
-    top: 0;
+    top: 1rem;
+    left: 1rem;
     z-index: 9;
+    width: 53px;
+    height: 53px;
+    border-radius: 50%;
+    border: 3px solid #a58187;
+    padding: 1rem;
+    line-height: 1;
 }
 
 /* ==========================================================================
