--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -233,10 +233,17 @@ img {
   position: relative;
 }
 
+.header-links > .chevron {
+  right: 0.5rem;
+  position: absolute;
+  top: calc(50% - 12px);
+}
+
 .header-links__overlay {
   background: rgba(0,0,0,0.3);
   bottom: 0;
   color: #fff;
+  font-family: 'Comfortaa', sans-serif;
   padding: 0.5rem 0;
   position: absolute;
   text-align: center;
@@ -245,13 +252,13 @@ img {
 
 .header-links__overlay > .heading {
   font-size: 40px;
-  font-family: 'Comfortaa-bold', cursive;
+  font-family: 'Comfortaa', sans-serif;
   font-weight: 700;
   line-height: 1;
 }
 
 .header-links__overlay > .sub-heading {
-  font-family: 'Comfortaa-light', cursive;
+  font-family: 'Comfortaa', sans-serif;
   font-weight: 300;
 }
 
@@ -307,7 +314,7 @@ img {
   background: #fff;
   border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  margin: 1rem;
+  margin: 0 1rem 1rem;
   padding: 1rem;
   position: relative;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -377,4 +384,26 @@ img {
 
 .memoria-link > .chevron {
   margin-left: auto;
+}
+
+.memoria-splash {
+  margin-top: 2rem;
+  padding: 1rem;
+  height: 700px;
+  overflow: hidden;
+}
+
+.memoria-splash > .heading {
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.memoria-splash > .full-logo {
+  max-width: 100%;
+  width: 180px;
+}
+
+.memoria-splash > p {
+  margin: 0 0 1rem 0;
 }
